<resources>
    <string name="app_name">First login and getstarted SomplifeegCourse</string>
    <string name="hello_again">Hello Again!</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_in">Sign IN</string>
    <string name="register_now"><![CDATA[Register Now >]]></string>
    <string name="dont_have_an_account">Don\'t have an account ?</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="get_started">Get Started</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="alredy_have_an_account">Alredy have an account</string>
    <string name="login">Login</string>
</resources>