<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/homecolor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView

        android:id="@+id/top_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="75dp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/signin_draw"/>
    <TextView
        android:textSize="50sp"
        android:textColor="@color/white"
        android:id="@+id/hello_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_again"
        app:layout_constraintTop_toBottomOf="@id/top_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_back_draw"
        android:padding="10dp"
        android:layout_marginHorizontal="20dp"
        android:id="@+id/username_edit_text"
        android:hint="@string/user_name"
        android:textColorHint="@color/hintcolor"
        android:drawableStart="@drawable/username_draw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/hello_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:background="@drawable/edit_text_back_draw"
        android:padding="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:id="@+id/email_edit_text"
         android:hint="@string/password"
        android:textColorHint="@color/hintcolor"
        android:drawableStart="@drawable/pass_draw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/username_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:textColor="@color/forgetpasswodcolor"
        android:text="@string/forget_password"
        app:layout_constraintTop_toBottomOf="@id/email_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgetpas_text"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in_button"
        android:background="@drawable/signin_btn_back_draw"
        app:layout_constraintTop_toBottomOf="@id/email_edit_text"
        android:layout_marginTop="40dp"

        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"/>
    <LinearLayout

        android:id="@+id/continue_with"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sign_in_button"
            app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView

            android:background="@drawable/startline_back_draw"
            android:layout_gravity="center"
            android:layout_width="50dp"
            android:layout_height="4dp"
            />
        <TextView
            android:layout_marginHorizontal="10dp"
            android:text="@string/or_continue_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:background="@drawable/endline_back_draw"
            android:layout_gravity="center"
            android:layout_width="50dp"
            android:layout_height="4dp"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_marginHorizontal="100dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/continue_with"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:paddingVertical="5dp"

            android:background="@drawable/edit_text_back_draw"
            android:layout_weight="1"
            android:src="@drawable/google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:background="@drawable/edit_text_back_draw"
            android:paddingVertical="5dp"
android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:src="@drawable/apple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:background="@drawable/edit_text_back_draw"
            android:paddingVertical="5dp"

            android:layout_weight="1"
            android:src="@drawable/facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:id="@+id/register_now_text"
        android:textColor="@color/forgetpasswodcolor"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_now"/>
    <TextView
        app:layout_constraintBottom_toTopOf="@id/register_now_text"
        android:layout_marginBottom="5dp"
        app:layout_constraintStart_toStartOf="@id/register_now_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_an_account"/>





</androidx.constraintlayout.widget.ConstraintLayout>