<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/homecolor"
    tools:context=".GetStarted">

    <ImageView
        android:id="@+id/top_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:src="@drawable/get_started_first_img"

        app:layout_constraintBottom_toTopOf="@+id/username_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_marginTop="250dp"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:id="@+id/hello_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_back_draw"
        android:padding="10dp"
        android:layout_marginHorizontal="20dp"
        android:id="@+id/username_edit_text"
        android:hint="@string/name"
        android:textColorHint="@color/hintcolor"
        android:drawableStart="@drawable/username_draw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/hello_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:background="@drawable/edit_text_back_draw"
        android:padding="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:id="@+id/email_edit_text"
        android:hint="@string/email"
        android:textColorHint="@color/hintcolor"
        android:drawableStart="@drawable/username_draw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/username_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:background="@drawable/edit_text_back_draw"
        android:padding="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:id="@+id/password_edit_text"
        android:hint="@string/password"
        android:textColorHint="@color/hintcolor"
        android:drawableStart="@drawable/pass_draw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/email_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_button"
        android:background="@drawable/signin_btn_back_draw"
        app:layout_constraintTop_toBottomOf="@id/password_edit_text"
        android:layout_marginTop="40dp"

        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"/>
    <LinearLayout

        android:id="@+id/continue_with"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sign_up_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView

            android:background="@drawable/startline_back_draw"
            android:layout_gravity="center"
            android:layout_width="50dp"
            android:layout_height="4dp"
            />
        <TextView
            android:layout_marginHorizontal="10dp"
            android:text="@string/or_continue_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:background="@drawable/endline_back_draw"
            android:layout_gravity="center"
            android:layout_width="50dp"
            android:layout_height="4dp"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_marginHorizontal="100dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/continue_with"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:paddingVertical="5dp"

            android:background="@drawable/edit_text_back_draw"
            android:layout_weight="1"
            android:src="@drawable/google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:background="@drawable/edit_text_back_draw"
            android:paddingVertical="5dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:src="@drawable/apple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:background="@drawable/edit_text_back_draw"
            android:paddingVertical="5dp"

            android:layout_weight="1"
            android:src="@drawable/facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:id="@+id/login_text"
        android:textColor="@color/forgetpasswodcolor"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"/>
    <TextView
        app:layout_constraintBottom_toTopOf="@id/login_text"
        android:layout_marginBottom="5dp"
        app:layout_constraintStart_toStartOf="@id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alredy_have_an_account"/>
</androidx.constraintlayout.widget.ConstraintLayout>